--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dom7": "^2.1.5",
     "framework7": "^5.7.10",
     "framework7-icons": "^3.0.1",
+    "localforage": "^1.9.0",
     "template7": "^1.4.2"
   },
   "devDependencies": {
