--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "anak-hebat",
   "private": true,
   "version": "1.0.0",
-  "description": "Anak Hebat",
+  "description": "Anak Hebat Indonesia",
   "repository": "https://github.com/csynoers/app-anak-hebat",
   "license": "UNLICENSED",
   "scripts": {
