--- a/cordova/package.json
+++ b/cordova/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.anakhebatindonesia.m",
-  "displayName": "Anak Hebat",
+  "displayName": "Anak Hebat Indonesia",
   "version": "1.0.0",
   "description": "A sample Apache Cordova application that responds to the deviceready event.",
   "main": "index.js",
@@ -31,7 +31,7 @@
     ]
   },
   "devDependencies": {
-    "cordova-android": "^8.1.0",
+    "cordova-android": "^9.0.0",
     "cordova-plugin-whitelist": "^1.3.4"
   }
 }
